# mcp-evals

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: all-opencode-deepseek-mcp-prewarm.yaml  apify-all-cli+skill-eval.yaml  apify-all-cli-eval.yaml  apify-all-haiku-smoketest.yaml  apify-all-mcp-eval.yaml  apify-all-mcpc-eval.yaml  apify-all-opencode-cheap-cli+skill-eval.yaml  apify-all-opencode-cheap-cli-eval.yaml  apify-all-opencode-cheap-mcp-eval.yaml  apify-all-opencode-cheap-mcpc-eval.yaml  apify-all-opencode-cheap-skill-eval.yaml  apify-all-opencode-deepseek-cli-eval.yaml  apify-all-opencode-deepseek-eval.yaml  apify-all-opencode-deepseek-mcp-eval.yaml  apify-all-opencode-deepseek-mcpc-eval.yaml  apify-all-skill-eval.yaml  apify-fetch-actor-id-haiku-smoketest.yaml  apify-fetch-actor-id-opencode-deepseek-cli+skill-eval.yaml  apify-fetch-actor-id-opencode-deepseek-cli-eval.yaml  apify-fetch-actor-id-opencode-deepseek-eval.yaml  apify-fetch-actor-id-opencode-deepseek-mcp-eval.yaml  apify-fetch-actor-id-opencode-deepseek-mcpc-eval.yaml  apify-fetch-actor-id-opencode-deepseek-skill-eval.yaml  apify-mcp-connected-haiku-smoketest.yaml  apify-scrape-page-haiku-smoketest.yaml  cross-3-cc-codex-cli+skill-eval.yaml  cross-3-cc-codex-cli-eval.yaml  cross-3-cc-codex-mcp-eval.yaml  cross-3-cc-codex-mcpc-eval.yaml  cross-3-cc-codex-skill-eval.yaml  cross-actor-and-repo-opencode-deepseek-pro-cli-eval.yaml  cross-actor-and-repo-opencode-deepseek-pro-mcp-eval.yaml  cross-actor-and-repo-opencode-deepseek-pro-mcpc-eval.yaml  cross5-3agents-cli+skill-eval.yaml  (+8 more)
(+271 files in other folders)
